--- a/templates/about.html
+++ b/templates/about.html
@@ -82,6 +82,10 @@
 								<a href="/product-page">Shop</a>
 							</li>
 
+							<li class="">
+								<a href="/yourorders-page" >Your Orders</a>
+							</li>
+
 							<li >
 								<a href="/cart-page">Cart</a>
 							</li>
@@ -179,6 +183,10 @@
 					<a href="/product-page">Shop</a>
 				</li>
 
+				<li>
+					<a href="/yourorders-page" >Your Orders</a>
+				</li>
+				
 				<li>
 					<a href="/cart-page" >Cart</a>
 				</li>
