--- a/templates/contact.html
+++ b/templates/contact.html
@@ -81,6 +81,14 @@
 								<a href="/product-page">Shop</a>
 							</li>
 
+							<li class="">
+								<a href="/yourorders-page" >Your Orders</a>
+							</li>
+
+							<li class=""> 
+								<a href="/cart-page">Cart</a>
+							</li>
+
 							<li>
 								<a href="/aboutus">About</a>
 							</li>
@@ -179,11 +187,19 @@
 				<li>
 					<a href="/product-page">Shop</a>
 				</li>
+	
+				<li>
+					<a href="/cart-page" >Cart</a>
+				</li>
+
+				<li>
+					<a href="/yourorders-page" >Your Orders</a>
+				</li>
 
 				<li>
 					<a href="/aboutus">About</a>
 				</li>
-
+	
 				<li>
 					<a href="/contactus">Contact</a>
 				</li>
