--- a/templates/product.html
+++ b/templates/product.html
@@ -86,7 +86,11 @@
 							<li class="active-menu">
 								<a href="/product-page">Shop</a>
 							</li>
-	
+							
+							<li class="">
+								<a href="/yourorders-page" >Your Orders</a>
+							</li>
+
 							<li class=""> 
 								<a href="/cart-page">Cart</a>
 							</li>
@@ -197,7 +201,10 @@
 				<li>
 					<a href="/cart-page" >Cart</a>
 				</li>
-	
+				
+				<li>
+					<a href="/yourorders-page" >Your Orders</a>
+				</li>
 	
 				<li>
 					<a href="/aboutus">About</a>
