--- a/templates/signup-model.html
+++ b/templates/signup-model.html
@@ -17,7 +17,7 @@
 				<p class="cd-signin-modal__fieldset">
 					<label class="cd-signin-modal__label cd-signin-modal__label--password cd-signin-modal__label--image-replace" for="signin-password">Password</label>
 					<input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding cd-signin-modal__input--has-border" name="password" id="signin-password" type="password"  placeholder="Password" required>
-					<a href="#" class="cd-signin-modal__hide-password js-hide-password">Show</a>
+					<a href="#" class="cd-signin-modal__hide-password js-hide-password" style="font-size: 15px;">Show</a>
 					<span class="cd-signin-modal__error">Please enter valid password !</span>	
 				</p>
 
@@ -27,7 +27,7 @@
 				</p>
 			</form>
 			
-			<p class="cd-signin-modal__bottom-message js-signin-modal-trigger"><a href="#0" data-signin="reset">Forgot your password?</a></p>
+			<p class="cd-signin-modal__bottom-message js-signin-modal-trigger"><a href="#0" data-signin="reset" style="font-size: 18px;">Forgot your password?</a></p>
 		</div> <!-- cd-signin-modal__block -->
 
 		<div class="cd-signin-modal__block js-signin-modal-block" data-type="signup"> <!-- sign up form -->
@@ -53,7 +53,7 @@
 				<p class="cd-signin-modal__fieldset">
 					<label class="cd-signin-modal__label cd-signin-modal__label--password cd-signin-modal__label--image-replace" for="signup-password">Password</label>
 					<input class="cd-signin-modal__input cd-signin-modal__input--full-width cd-signin-modal__input--has-padding cd-signin-modal__input--has-border" name="password" id="signup-password" pattern="^(?=.*[a-z])(?=.*[0-9]).{6,64}$" type="password"  placeholder="Password" required>
-					<a href="#" class="cd-signin-modal__hide-password js-hide-password">Show</a>
+					<a href="#" class="cd-signin-modal__hide-password js-hide-password" style="font-size: 15px;">Show</a>
 					<span class="cd-signin-modal__error">Error message here!</span>
 					<p style="color:red; font-size: 13px;">*password should contain min of 8 characters with atleast 1 numerical digit.</p>
 				</p>
@@ -112,7 +112,7 @@
 		<div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
 		<div class="modal-body text-center" id="signout-body"><i class="fa fa-question-circle"></i> Are you sure you want to Sign-off? 
 		<p class="modal-body text-center" id="signout-msg"> You're Signed Out!</p></div>
-		<div class="modal-footer"><button class="btn btn-primary btn-block" id="signout-btn" >Signout</button></div>
+		<div class="modal-footer"><button class="btn btn-primary btn-block" id="signout-btn" style="background-color: #6c7ae0;">Signout</button></div>
 	  </div>
 	</div>
   </div>
