--- a/templates/shoping-cart.html
+++ b/templates/shoping-cart.html
@@ -80,7 +80,11 @@
 							<li class="">
 								<a href="/product-page">Shop</a>
 							</li>
-	
+							
+							<li class="">
+								<a href="/yourorders-page" >Your Orders</a>
+							</li>
+
 							<li class="active-menu"> 
 								<a href="/cart-page">Cart</a>
 							</li>
@@ -186,7 +190,11 @@
 				<li>
 					<a href="/product-page">Shop</a>
 				</li>
-	
+				
+				<li>
+					<a href="/yourorders-page" >Your Orders</a>
+				</li>
+				
 				<li>
 					<a href="/cart-page" >Cart</a>
 				</li>
@@ -323,7 +331,7 @@
 		
 
 	<!-- Shoping Cart -->
-	<form class="bg0 p-t-75 p-b-85">
+	<form class="bg0 p-t-75 p-b-85" id="cart-form">
 		<div class="container products-container product">
 			<div class="row">
 				<div class="col-lg-10 col-xl-10 m-lr-auto m-b-50">
@@ -414,7 +422,7 @@
 									</div>
 
 									<div class="bor8 bg0 m-b-12">
-										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="mob-number" placeholder="Mobile Number" required>
+										<input class="stext-111 cl8 plh3 size-111 p-lr-15" type="text" name="mob-number" pattern="[0-9]{10}" placeholder="Mobile Number" required>
 									</div>
 
 									<div class="bor8 bg0 m-b-22">
@@ -533,10 +541,11 @@
 								</div>
 							</div>
 						</div>
-
-						<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer order-btn">
-							Place Your Order
-						</button>
+						<div>
+							<button class="flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer order-btn" type="submit">
+								Place Your Order
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
