--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,21 +43,19 @@
 					<div class="left-top-bar">
 						Free shipping for standard order over Rs. 1000
 					</div>
-
+	
 					<div class="right-top-bar flex-w h-full">
-
-						<a href="#" class="flex-c-m trans-04 p-lr-10 js-signin-modal-trigger" data-signin="login">
+						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger signin-out" data-signin="login" data-toggle="modal" data-target="">
 							Sign In
 						</a>
-
+	
 						<a href="#" class="flex-c-m trans-04 p-lr-25">
 							Help & FAQs
 						</a>
-
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
+	
+						<a href="#" class="flex-c-m trans-04 p-lr-25 user-name">
 							My Account
 						</a>
-
 					</div>
 				</div>
 			</div>
@@ -477,7 +475,7 @@
 					</h4>
 
 					<p class="stext-107 cl7 size-201">
-						Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879
+						Any questions? Let us know in store at 3rd floor, 3/22 First St, Tiruppur, IN 641607 or call us on +91 0421 422 8089
 					</p>
 
 					<div class="p-t-27">
@@ -516,7 +514,7 @@
 			</div>
 
 			<div class="p-t-40">
-				<div class="flex-c-m flex-w p-b-18">
+				<!-- <div class="flex-c-m flex-w p-b-18">
 					<a href="#" class="m-all-1">
 						<img src="../static/images/icons/icon-pay-01.png" alt="ICON-PAY">
 					</a>
@@ -536,11 +534,11 @@
 					<a href="#" class="m-all-1">
 						<img src="../static/images/icons/icon-pay-05.png" alt="ICON-PAY">
 					</a>
-				</div>
+				</div> -->
 
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  |  Hang 
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="/">hang outfits</a> 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
 				</p>
