--- a/templates/shoping-cart.html
+++ b/templates/shoping-cart.html
@@ -55,7 +55,7 @@
 							Help & FAQs
 						</a>
 	
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
+						<a href="#" class="flex-c-m trans-04 p-lr-25 user-name">
 							My Account
 						</a>
 					</div>
@@ -166,7 +166,7 @@
 							Help & FAQs
 						</a>
 	
-						<a href="#" class="flex-c-m p-lr-10 trans-04">
+						<a href="#" class="flex-c-m trans-04 p-lr-25 user-name">
 							My Account
 						</a>
 	
@@ -331,7 +331,7 @@
 		
 
 	<!-- Shoping Cart -->
-	<form class="bg0 p-t-75 p-b-85" id="cart-form">
+	<form class="bg0 p-t-75 p-b-85" id="cart-form" name="checkout-form">
 		<div class="container products-container product">
 			<div class="row">
 				<div class="col-lg-10 col-xl-10 m-lr-auto m-b-50">
@@ -446,7 +446,8 @@
 									</div>
 
 									<div class="rs1-select2 rs2-select2 bor8 bg0 m-b-12 m-t-9">
-										<select class="js-select2" name="state">
+										<select class="js-select2" name="state" required>
+											<option value="">select state</option>
 											<option value="Andhra Pradesh">Andhra Pradesh</option>
 											<option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
 											<option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -629,7 +630,7 @@
 					</h4>
 
 					<p class="stext-107 cl7 size-201">
-						Any questions? Let us know in store at 8th floor, 379 Hudson St, New York, NY 10018 or call us on (+1) 96 716 6879
+						Any questions? Let us know in store at 3rd floor, 3/22 First St, Tiruppur, IN 641607 or call us on +91 0421 422 8089
 					</p>
 
 					<div class="p-t-27">
@@ -668,7 +669,7 @@
 			</div>
 
 			<div class="p-t-40">
-				<div class="flex-c-m flex-w p-b-18">
+				<!-- <div class="flex-c-m flex-w p-b-18">
 					<a href="#" class="m-all-1">
 						<img src="../static/images/icons/icon-pay-01.png" alt="ICON-PAY">
 					</a>
@@ -688,11 +689,11 @@
 					<a href="#" class="m-all-1">
 						<img src="../static/images/icons/icon-pay-05.png" alt="ICON-PAY">
 					</a>
-				</div>
+				</div> -->
 
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="/">hang outfits</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
 				</p>
