--- a/templates/blog.html
+++ b/templates/blog.html
@@ -380,50 +380,104 @@
 										<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Delivered</div> <!--<div style="padding-left: 10%; padding-top: 2%;">(12.01.2021)</div>--></li>
 										</ul>
 									</td>
+									
+									
 								</tr>
+							
 								
-								<table>
-									<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-60 p-lr-15-sm" >
-			
-										<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10"  id="myBtncancel">
-											  CANCEL ORDER <div class="tooltip100" id="hide-mobile" data-tooltip="you can only cancel the order before shipped">
-												&nbsp; <i class="zmdi zmdi-help-outline"></i>
-															</div>
-										</div>
-										
-								
-										<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
-											 REFUND ORDER <!-- <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
-															<i class="zmdi zmdi-help-outline"></i>
-															</div> -->
-															<div class="tooltip100" id="hide-mobile" data-tooltip="3 days return policy">
-																&nbsp; <i class="zmdi zmdi-help-outline"></i>
-																			</div>
-										</div>
-											
-									</div>
-
-								</table>
 								
 							</table>
-
-							<!-- <tr class="table_row">
+						
+							<div>
 								<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-60 p-lr-15-sm" >
 		
-									<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
-										 CANCEL ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
-														<i class="zmdi zmdi-help-outline"></i>
+
+									
+
+									<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10 m-l-auto"  id="myBtncancel" >
+										  CANCEL ORDER <div class="tooltip100" id="hide-mobile" data-tooltip="you can only cancel the order before shipped">
+											&nbsp; <i class="zmdi zmdi-help-outline"></i>
 														</div>
 									</div>
-										
-									<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
-										RETURN ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
-											<i class="zmdi zmdi-help-outline"></i>
-											</div>
-									</div>
+									
+							
+									<!-- <div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
+										 REFUND ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
+														<i class="zmdi zmdi-help-outline"></i>
+														</div>
+														<div class="tooltip100" id="hide-mobile" data-tooltip="3 days return policy">
+															&nbsp; <i class="zmdi zmdi-help-outline"></i>
+																		</div>
+									</div> -->
 										
 								</div>
-							</tr> -->
+
+							</div>
+						
+						</br>
+
+						<table  class="table-shopping-orders">
+							<tr class="table_row">
+								<td class="column-1">
+									<div class="how-itemcart1 product">
+										<img src="../static/images/HGWCS001.jpg" alt="IMG">
+									</div>
+								</td>
+								<td class="column-2"> <div class="prd-prop">order id : 112005 </div> <div class="prd-name">White T-shirt</div>  <div class="prd-prop">size: S | colour: white </div></td>
+								<td class="column-3">&#8377; 18</td>
+								 
+								<td class="column-4">
+									<span>1</span>
+								</td>
+
+								<td class="column-5" name='' id='col5' > 
+									<div name='product-sum' class='prd-sum'> &#8377; 150</div>  
+			
+								</td>
+								<td class="column-6">  <div class="prd-prop">Ranganaatha puram 1st street kongu main road Tiruppur-641607</div> <div class="prd-prop">Name : harihar</div> <div class="prd-prop">ph.no : 9600896275 </div></td>
+								<td class="column-7" id="order-status">
+									<ul>
+										
+									<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Ordered &nbsp; </div> </li>
+									<!-- <div class="icon-sts"></div> -->
+									<li><div><i class="icon-sts completed zmdi zmdi-check-circle"></i> Shipped &nbsp; </div></li>
+									<!-- <div class="icon-sts"></div> -->
+									<li><div><i class="icon-sts zmdi zmdi-check-circle"></i> Delivered</div> <!--<div style="padding-left: 10%; padding-top: 2%;">(12.01.2021)</div>--></li>
+									</ul>
+								</td>
+								
+								
+							</tr>
+						
+							
+							
+						</table>
+					
+						<div>
+							<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-60 p-lr-15-sm" >
+	
+
+								
+
+								<div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10 m-l-auto"  id="myBtncancel" >
+										  CANCEL ORDER <div class="tooltip100" id="hide-mobile" data-tooltip="you can only cancel the order before shipped">
+											&nbsp; <i class="zmdi zmdi-help-outline"></i>
+														</div>
+									</div>
+								
+						
+								<!-- <div class="flex-c-m stext-101 cl2 size-100 bg8 bor13 hov-btn3 p-lr-15 pointer trans-04 m-tb-10">
+									 REFUND ORDER <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-15">
+													<i class="zmdi zmdi-help-outline"></i>
+													</div>
+													<div class="tooltip100" id="hide-mobile" data-tooltip="3 days return policy">
+														&nbsp; <i class="zmdi zmdi-help-outline"></i>
+																	</div>
+								</div> -->
+									
+							</div>
+
+						</div>
 						</div>
 					</div>
 				</div>
@@ -855,7 +909,7 @@
 <!-- <button id="myBtn">Open Modal</button> -->
 
 <!-- The Modal -->
-<div  class="myModalcancel">
+<div id="working" class="myModalcancel">
 
   <!-- Modal content -->
   <div class="cancel-modal-content">
@@ -865,7 +919,7 @@
 	<div class="swal-button-container">
 
 		<button class="cancel-swal-button">Yes</button>
-		<button class="cancel-swal-button">NO</button>
+		<button class="cancel-swal-button" id="btncancelno">NO</button>
 	
 		
 	
